--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <script type="text/javascript">
+  	$(document).ready(function(){
+  		$('.nav li').click(function(){
+  			var index = $('.nav li').index(this);
+  			$('.nav li').css('background','#049FF1').eq(index).css('background','#065FB9');
+  			$('.content').fadeOut().eq(index).fadeIn();
+  		})
+  	})
+</script>
   </head>
   <body>
 
@@ -39,30 +47,363 @@
         <ul></ul>
       </nav>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <div class="container">
+	<div class="nav_outer">
+		<ul class="nav fixed">
+			<li style="background:#065FB9;">DAY1</li>
+			<li>DAY2</li>
+			<li>DAY3</li>
+			<li>DAY4</li>
+			<li>DAY5</li>
+		</ul>
+	</div><!--end nav_outer-->
+	<div class="content">
+		<table class="schedule_list_outer">
+			<tr>
+				<td>8:30</td>
+				<td>起床</td>
+			</tr>
+			<tr>
+				<td>9:00</td>
+				<td>MC早餐</td>
+			</tr>
+			<tr>
+				<td>10:00</td>
+				<td>
+					新加坡滨海湾花园Gardens By The Bay
+					<div class="pic_outer fixed">
+						<img src="http://file28.mafengwo.net/M00/EA/91/wKgB6lSJZwCAGnJtACmvmSD63kw74.rbook_comment.w750.jpeg" class="pic">
+						<img src="http://file28.mafengwo.net/M00/EA/87/wKgB6lSJZvWAaScgAChZZQSBp2I20.rbook_comment.w305.jpeg" class="pic">
+					</div>
+					这座位于市中心的超级花园以10亿元造价成为新加坡最新的地标，游客可在花园中巨大的半球形温室里观赏到超过25万棵奇花异草，和全球最大的室内瀑布。园区共分成三个部分： 滨海南花园、滨海东花园，以及衔接二者的滨海中花园。
+					其中最大的滨海花园属滨海南花园，其中建有多棵巨大的超级树 (Supertree)，十分引人注目。 这些超级树其实是一座座 16层楼高的垂直花园，您在树顶可以鸟瞰整个花园景色。此外，超级树还具备多项实用性功能：收集雨水、生成太阳能以及充当公园温室的通风管道。<br /><br />
+   
+				    交通<br />
+					乘坐地铁CE线至Bayfront站下车<br /><br />
+					门票<br />
+					海南花园户外花园入场免费<br />
+					空中栈道：5新元<br />
+					植物冷室：28新元<br /><br />
+					开放时间<br />
+				    每早5：00至次日凌晨2：00。
+				    植物冷室和华侨银行空中走道：每天上午9：00至晚上21：00
+				    最晚售票时间：晚上20：30
+				</td>
+			</tr>
+			<tr>
+				<td style="background:orange;">13:00</td>
+				<td style="background:orange;">熟食中心 午餐（可以在牛车水里吃，很便宜）</td>
+			</tr>
+			<tr>
+				<td>14:30</td>
+				<td>
+					鱼尾狮公园Merlion Park
+					<div class="pic_outer fixed">
+						<img src="http://file21.mafengwo.net/M00/79/47/wKgB3FGN_9CAbHF7AAUgDdIR2XA64.rbook_comment.w305.jpeg" class="pic">
+						<img src="http://file28.mafengwo.net/M00/FD/FF/wKgB6lRqMHiAXM29AAeyeJJSQPY25.rbook_comment.w305.jpeg" class="pic">
+					</div>
+					鱼尾狮像坐落于市内新加坡河畔鱼尾狮公园内，是新加坡的标志和象征。塑像由雕刻家林南先生和他的两个孩子共同雕塑完成，每年来自全球一百多万的游客都会专程造访鱼尾狮公园，与世界著名的鱼尾狮拍照留念。高8米的狮子口中喷出一股清水，汇入新加坡河中。公园周围还聚集了很多新加坡著名的地标性建筑，如滨海艺术中心、政府大厦、高等法院、维多利亚剧院、莱佛士铜像等，是徒步游览的不二之选。<br /><br />
+    				交通<br />
+    				地铁NS线、EW线市政厅站（City Hall），乘坐10、57、70、75等路公交车至Fullerton Sq站下车。<br /><br />
+    				门票<br />
+    				免费<br /><br />
+    				开放时间<br />
+    				全天
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+				</td>
+			</tr>
+			<tr>
+				<td>16:00</td>
+				<td>
+					小印度Little India 
+					<div class="pic_outer fixed">
+						<img src="http://file20.mafengwo.net/M00/3A/50/wKgB3FGXpRaATFfKABT8s011-r465.rbook.w311.jpeg" class="pic">
+						<img src="http://file29.mafengwo.net/M00/7C/C4/wKgBpVU1dFqAEQ-vABLnQIUFeF813.rbook.w311.jpeg" class="pic">
+					</div>
+					小印度位于新加坡河的东岸，是当地泰米尔人的族裔社区，犹如印度的缩影。印度在许多方面类似于印度，包括道路建设和使用，与新加坡的其余部分的卫生状况大为不同，更具有印度当地的特色。<br /><br />
+    				交通<br />
+    				乘坐地铁NE线到NE7小印度站(Little India)或NE8花拉公园站(Farrer Park)。<br /><br />
+    				门票<br />
+    				免费<br /><br />
+				</td>
+			</tr>
+			<tr>
+				<td>17:00</td>
+				<td>
+					牛车水Chinatown 
+					<div class="pic_outer fixed">
+						<img src="http://file29.mafengwo.net/M00/43/92/wKgBpVUjuYiAHI_WABMgz59Hvl082.rbook.w311.jpeg" class="pic">
+						<img src="http://file26.mafengwo.net/M00/47/71/wKgB4lJSb5qAX_f2ABCxotkPzr471.rbook.w311.jpeg" class="pic">
+					</div>
+					牛车水一带是新加坡唐人街的所在，但并不是青一色华人居住的地方。在这里，直落亚逸街旁的阿布拉回教堂、桥南路的詹美回教堂和马里安曼庙，可以见证新加坡多元种族和睦相处的一面。现代购物中心、各色小贩和百年老店毗邻而居，在众多充满特色的小巷中漫步，您会看到手工艺人制作的各种古色古香的工艺品。同时，这里众多的餐馆、酒吧、艺术画廊和纪念品商店里面的商品琳琅满目，值得一游。夜市的牛车水灯火辉煌，有点像中国的庙会。<br /><br />
+    				交通<br />
+    				NE线牛车水站(Chinatown)，车站编号NE4；<br />
+					EW线欧南园站(Outram Park)，车站编号EW16；<br />
+					丹戎巴葛站(Tanjong Pagar)，车站编号EW15。 Sq站下车。<br /><br />
+    				门票<br />
+    				免费<br /><br />
+    				开放时间<br />
+    				中午店家陆续开门，营业直至凌晨。
+				</td>
+			</tr>
+			<tr>
+				<td style="background:orange;">18:00</td>
+				<td style="background:orange;">熟食中心 午餐</td>
+			</tr>
+			<tr>
+				<td>19:00</td>
+				<td>
+					双螺旋桥Double Helix Bridge 
+					<div class="pic_outer fixed">
+						<img src="http://file28.mafengwo.net/M00/DB/B5/wKgB6lQ-kO-Ac_DvAB4o_66m9-803.rbook.w311.jpeg" class="pic">
+						<img src="http://file28.mafengwo.net/M00/70/1F/wKgB6lQmxXKAG5iOAASqVxFeQkM35.rbook.w311.jpeg" class="pic">
+					</div>
+					双螺旋桥位于新加坡滨海湾新市区，是世界上首座曲线桥，2010年4月24日通行。全桥共有长280米的步行通道，结构非常精密。大桥有5座观景平台，位置十分优越。双螺旋的形式象征了“生生不息”、“复兴”、“永远繁荣”、“成长”，相信这样的建筑奇迹一定不会让你失望。<br /><br />
+    				交通<br />
+    				乘坐地铁CE线至Bayfront站下车<br /><br />
+    				门票<br />
+    				免费<br /><br />
+    				开放时间<br />
+    				全天开放
+				</td>
+			</tr>
+			<tr>
+				<td>20:00</td>
+				<td>
+					克拉码头<br />
+					休息、喝一杯、聊聊天
+				</td>
+			</tr>
+			<tr>
+				<td>21:00</td>
+				<td>
+					回酒店
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div class="content">
+		<table class="schedule_list_outer">
+			<tr>
+				<td>8:00</td>
+				<td>
+					起床
+				</td>
+			</tr>
+			<tr>
+				<td>9:00</td>
+				<td>
+					当地早餐
+				</td>
+			</tr>
+			<tr>
+				<td>10:00</td>
+				<td>
+					怡丰城vivocity <br />
+					坐捷运上圣淘沙岛
+				</td>
+			</tr>
+			<tr>
+				<td>10:30</td>
+				<td>
+					S.E.A.海洋馆 S.E.A. Aquarium 
+					<div class="pic_outer fixed">
+						<img src="http://file29.mafengwo.net/M00/A0/4E/wKgBpVUd-ZKAev6rAAGcYQTNSMI00.rbook.w311.jpeg" class="pic">
+						<img src="http://file25.mafengwo.net/M00/D4/6C/wKgB4lNL2xWAGBDbAAUcv31iDZA99.rbook.w311.jpeg" class="pic">
+					</div>
+					S.E.A. 海洋馆位于新加坡圣淘沙岛上的海事博物馆内，设有多达49个生态区，汇集了来自世界各地超过万种的海洋生物，其中包括雄伟的鬼蝠魟、伊氏石斑鱼、路氏双髻鲨等庞然生物。这是全球最大的海洋馆，访客们可进入令人叹为观止的海底奇妙世界，展开一次知识探索之旅。海洋馆最引人瞩目的，便是长36 米、高8.3 米的全球最大水族观景窗，让访客能观赏深海栖息地展区，沉浸在神秘又迷人的海洋世界，与鬼蝠魟、豹纹鲨等海洋生物面对面。此外，馆内甚至拥有200多条鲨鱼，让访客能近距离一窥这些海洋“鲨”手的真面目。惊喜体验，尽在这个顶级海洋馆。<br /><br />
+    				交通<br />
+    				地铁/圣淘沙捷运：搭乘地铁东北线或环线至港湾站。从E 出口前往怡丰城的3层搭乘圣淘沙捷运。乘坐1站后在滨海站下车。朝小型鱼尾狮雕像的方向直走，直至走过左侧的Candylicious糖果店。靠左通行，穿过小桥抵达海事博物馆。S.E.A.海洋馆位于海事博物馆内。观看视频导览获知如何从滨海站抵达<br /><br />
+    				门票<br />
+    				一日票成人S$38，儿童(4-12岁)$28，老人(60岁及以上)$28。<br />
+					台风剧场入门票S$2，可观看4D影片。<br />
+					另外，S.E.A. 海洋馆与新加坡环球影城和水上探险乐园有不同的套票组合，详细查看官网。<br /><br />
+    				开放时间<br />
+    				通常为10：00-19：00，但每日开闭馆时间有变动，具体需查看官网日历。
+				</td>
+			</tr>
+			<tr>
+				<td style="background:orange;">13:00</td>
+				<td style="background:orange;">
+					在岛上吃午餐
+				</td>
+			</tr>
+			<tr>
+				<td>14:30</td>
+				<td>
+					巴拉湾海滩Palawan Beach sentosa 
+					<br />
+					坐捷运到最后一站巴拉湾海滩Palawan Beach sentosa  海边吹风喝喝酒 下水玩 踏足亚洲最南的岛屿 
+					<div class="pic_outer fixed">
+						<img src="http://file26.mafengwo.net/M00/EB/1D/wKgB4lLw1OOAfumyAAIgPCPhRZk18.rbook.w311.jpeg" class="pic">
+						<img src="http://file26.mafengwo.net/M00/0A/49/wKgB4lItewqACa8xAAQtbpYrsSU29.rbook.w311.jpeg" class="pic">
+					</div>
+					圣淘沙由三个海滩构成：丹戎海滩（TanjongBeach）、巴拉湾海滩（PalawanBeach）与西乐索海滩（SilosoBeach）。巴拉湾海滩的吸引力在于它的地理位置和各色沙滩酒吧。一座吊桥将巴拉湾海面与另一座小岛相连，这里是亚洲大陆的最南端，亦是亚洲最接近赤道的地方。小岛上可以眺望到磅礴的南中国海及美丽的夕阳。<br /><br />
+    				交通<br />
+    				可在怡丰城(Vivo City)搭乘轻轨前往圣淘沙岛，在终点站Beach Station下车，步行10分钟即是。<br /><br />
+    				门票<br />
+    				免费<br /><br />
+    				开放时间<br />
+    				全天
+				</td>
+			</tr>
+			<tr>
+				<td>16:30</td>
+				<td>
+					下岛
+				</td>
+			</tr>
+			<tr>
+				<td>17:30</td>
+				<td>
+					VIVOCITY 大食代 晚餐
+				</td>
+			</tr>
+			<tr>
+				<td>19:30</td>
+				<td>
+					夜间野生动物园Night Safari 
+					<br />
+					夜间野生动物园开放与1994年，是世界上第一个专为夜间动物而设立的野生动物园。园区内居住着超过2500只动物，游人在宽阔的自然栖息地中观察夜行动物的行踪。在45分钟的行程中，游客乘坐游览车，穿梭于世界7个不同地理区域。从崎岖的喜马拉雅山麓到亚洲河区森林的沼泽
+					<div class="pic_outer fixed">
+						<img src="http://file26.mafengwo.net/M00/1F/57/wKgB4lJSU-2AOGC4AApSvq_h02c91.rbook_comment.w1920.jpeg" class="pic">
+						<img src="http://file27.mafengwo.net/M00/5F/5C/wKgB6lTy6u6AAkYSAAKkQavgMYc97.rbook_comment.w750.jpeg" class="pic">
+					</div>
+					夜间野生动物园开放与1994年，是世界上第一个专为夜间动物而设立的野生动物园。园区内居住着超过2500只动物，游人在宽阔的自然栖息地中观察夜行动物的行踪。在45分钟的行程中，游客乘坐游览车，穿梭于世界7个不同地理区域。从崎岖的喜马拉雅山麓到亚洲河区森林的沼泽河岸，游览车上的导游会分享各种有趣的知识以及小故事。注意，全程需关闭照相机的闪光灯哦！另外，在游览车无法到达的地方，游客可以徒步在雨林中蜿蜒的步行道上，与花豹、渔猫、马来大狐蝠、沙袋鼠等近距离接触。在夜间野生动物园的露天圆型剧场里还可以欣赏表演，婆罗洲土著部落表演中，勇猛的战士展现出令人瞪目结舌的喷火技能。《夜晚的精灵》是动物的互动表演，以娱乐方式配合舞台灯光呈现夜间动物特有的自然习性。
+					<br /><br />
+    				交通<br />
+    				地铁NS线至蔡厝港站（Choa Chu Kang），转乘SMRT 927路公共汽车；<br />
+					地铁NS线到宏茂桥站（Ang Mo Kio），转乘新巴138路。<br />
+					另外，市区还有班车站点可以乘坐动物园开设的班车直达，具体站点和班次时间请参考夜间动物园官网(www.nightsafari.com.sg/)的交通指南。<br /><br />
+    				门票<br />
+    				入园门票成人42新币，儿童(3-12岁)28新币。<br />
+					中文导览车需额外付费10新币。<br /><br />
+    				开放时间<br />
+    				每天19:30-24:00(最后售票时间为晚上11.15)，餐馆和零售商店每天17：30开始营业。
+				</td>
+			</tr>
+			<tr>
+				<td>23:00</td>
+				<td>
+					回酒店
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div class="content">
+		<table class="schedule_list_outer">
+			<tr>
+				<td>9:00</td>
+				<td>
+					起床
+				</td>
+			</tr>
+			<tr>
+				<td>10:00</td>
+				<td>
+					当地早餐
+				</td>
+			</tr>
+			<tr>
+				<td>11:00</td>
+				<td>
+					怡丰城vivocity<br />
+					坐捷运上圣淘沙岛
+				</td>
+			</tr>
+			<tr>
+				<td>11:30</td>
+				<td>
+					新加坡环球影城Universal Studios Singapore 
+					<div class="pic_outer fixed">
+						<img src="http://file27.mafengwo.net/M00/FD/32/wKgB6lRqL2-APpBtAAhmfAx5quc86.rbook_comment.w1920.jpeg" class="pic">
+						<img src="http://file27.mafengwo.net/M00/FD/2A/wKgB6lRqL2mAS0f6AAlJ1R_iJtM76.rbook_comment.w750.jpeg" class="pic">
+					</div>
+					新加坡环球影城主题公园坐落在圣淘沙岛名胜世界内，是东南亚唯一一个环球影城，适合年轻人和亲子家庭体验游玩。<br />
+					园区总共设有七个主题区，运用尖端科技与电影特效相结合，为观众带来身临其境的惊险体验。热门娱乐项目例如：变形金刚3D对决、木乃伊复仇记、未来水世界表演、史瑞克4D影院等。<br />
+					公园内还有惊险的特技表演和壮观的环球影城明星盛大游行，并且可以跟路边晃悠的电影角色人物合影留念。旺季，主题公园的游玩项目免不了要排队，但是很多项目都设有单人通道，加快排队进程。也可以另行购买快速通行卡，免去排队的烦恼。<br /><br />
+    				交通<br />
+    				上岛在怡丰城(Vivo City)三楼搭乘圣淘沙捷运进入圣淘沙名胜世界或通过步行栈道即可抵达圣淘沙环球影城。<br /><br />
+    				门票<br />
+    				1日票（周一至周五）成人新币66元，4~12岁儿童新币48元；<br />
+					1日票（周六、周日及公共假日）成人新币72元，4~12岁儿童新币52元。<br /><br />
+    				开放时间<br />
+    				10:00-19:00
+				</td>
+			</tr>
+			<tr>
+				<td>19:00</td>
+				<td>
+					出园找吃的
+				</td>
+			</tr>
+			<tr>
+				<td>20:00</td>
+				<td>
+					回酒店或者自己活动
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div class="content">
+		<table class="schedule_list_outer">
+			<tr>
+				<td>10:00<br />(or anytime you perfer to get up)</td>
+				<td>起床</td>
+			</tr>
+			<tr>
+				<td>10:00</td>
+				<td>
+					退房（行李可在原酒店寄存），出发，各自活动一天<br />
+					do what you wanna do, go anywhere you wanna go !
+				</td>
+			</tr>
+			<tr>
+				<td>16:30</td>
+				<td>
+					新加坡金沙娱乐城（Marina Bay Sands）<br />
+					酒店check in
+					<br />
+					酒店外形非常壮观，像一只驶在半空中的大船，在楼顶还有一个无边露天泳池，酒店房间很豪华，设施齐全，干净整齐，服务人员热情周到。
+					<div class="pic_outer fixed">
+						<img src="http://file26.mafengwo.net/M00/DD/83/wKgB4lMQE7WAPcc3AAHNKer56rQ25.rbook_comment.w750.jpeg" class="pic">
+						<img src="http://file26.mafengwo.net/M00/DD/9F/wKgB4lMQE8KAMusHAAKDVbE-ELE52.rbook_comment.w750.jpeg" class="pic">
+					</div>
+					入住时间：15:00以后      离店时间：11:00以前
+				</td>
+			</tr>
+			<tr>
+				<td>17:00</td>
+				<td>
+					玩酒店
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div class="content">
+		<table class="schedule_list_outer">
+			<tr>
+				<td>自由选择起床时间</td>
+				<td>
+					玩酒店
+				</td>
+			</tr>
+			<tr>
+				<td>11:00</td>
+				<td>
+					check out
+				</td>
+			</tr>
+			<tr>
+				<td>12:00</td>
+				<td>
+					樟宜机场
+				</td>
+			</tr>
+		</table>
+	</div>
+</div><!--end container-->
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/guxuyang">guxuyang</a></p>
