--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			</tr>
 		</table>
 	</div>
-	<div class="content">
+	<div class="content" style="display:none;">
 		<table class="schedule_list_outer">
 			<tr>
 				<td>8:00</td>
@@ -290,7 +290,7 @@
 			</tr>
 		</table>
 	</div>
-	<div class="content">
+	<div class="content" style="display:none;">
 		<table class="schedule_list_outer">
 			<tr>
 				<td>9:00</td>
@@ -345,7 +345,7 @@
 			</tr>
 		</table>
 	</div>
-	<div class="content">
+	<div class="content" style="display:none;">
 		<table class="schedule_list_outer">
 			<tr>
 				<td>10:00<br />(or anytime you perfer to get up)</td>
@@ -380,7 +380,7 @@
 			</tr>
 		</table>
 	</div>
-	<div class="content">
+	<div class="content" style="display:none;">
 		<table class="schedule_list_outer">
 			<tr>
 				<td>自由选择起床时间</td>
