--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <script type="text/javascript">
   	$(document).ready(function(){
+  		alert(111);
   		$('.nav_li').click(function(){
   			var index = $('.nav_li').index(this);
   			$('.nav_li').css('background','#049FF1').eq(index).css('background','#065FB9');
