--- a/index.html
+++ b/index.html
@@ -58,8 +58,76 @@
 			<li class="nav_li">DAY3</li>
 			<li class="nav_li">DAY4</li>
 			<li class="nav_li">DAY5</li>
+			<li class="nav_li">DAY6</li>
 		</ul>
 	</div><!--end nav_outer-->
+	<div class="content">
+		<table class="schedule_list_outer">
+			<tr>
+				<td>16:35</td>
+				<td>入境并坐巴士（地铁）前往酒店</td>
+			</tr>
+			
+			<tr>
+				<td>17:35</td>
+				<td>到达酒店check in并放置行李</td>
+			</tr>
+			<tr>
+				<td style="background:orange;">18:00</td>
+				<td style="background:orange;">晚餐--文东记海南鸡饭（马里士他路399/401/403）</td>
+			</tr>
+			<tr>
+				<td>19:30</td>
+				<td>
+					鱼尾狮公园Merlion Park
+					<div class="pic_outer fixed">
+						<img src="http://file21.mafengwo.net/M00/79/47/wKgB3FGN_9CAbHF7AAUgDdIR2XA64.rbook_comment.w305.jpeg" class="pic">
+						<img src="http://file28.mafengwo.net/M00/FD/FF/wKgB6lRqMHiAXM29AAeyeJJSQPY25.rbook_comment.w305.jpeg" class="pic">
+					</div>
+					鱼尾狮像坐落于市内新加坡河畔鱼尾狮公园内，是新加坡的标志和象征。塑像由雕刻家林南先生和他的两个孩子共同雕塑完成，每年来自全球一百多万的游客都会专程造访鱼尾狮公园，与世界著名的鱼尾狮拍照留念。高8米的狮子口中喷出一股清水，汇入新加坡河中。公园周围还聚集了很多新加坡著名的地标性建筑，如滨海艺术中心、政府大厦、高等法院、维多利亚剧院、莱佛士铜像等，是徒步游览的不二之选。<br /><br />
+    				交通<br />
+    				地铁NS线、EW线市政厅站（City Hall），乘坐10、57、70、75等路公交车至Fullerton Sq站下车。<br /><br />
+    				门票<br />
+    				免费<br /><br />
+    				开放时间<br />
+    				全天
+				</td>
+			</tr>
+			<tr>
+				<td>20:30</td>
+				<td>
+					双螺旋桥
+					<div class="pic_outer fixed">
+						<img src="http://file28.mafengwo.net/M00/DB/B5/wKgB6lQ-kO-Ac_DvAB4o_66m9-803.rbook.w311.jpeg" class="pic">
+						<img src="http://file28.mafengwo.net/M00/70/1F/wKgB6lQmxXKAG5iOAASqVxFeQkM35.rbook.w311.jpeg" class="pic">
+					</div>
+					双螺旋桥位于新加坡滨海湾新市区，是世界上首座曲线桥，2010年4月24日通行。全桥共有长280米的步行通道，结构非常精密。大桥有5座观景平台，位置十分优越。双螺旋的形式象征了“生生不息”、“复兴”、“永远繁荣”、“成长”，相信这样的建筑奇迹一定不会让你失望。<br /><br />
+    				交通<br />
+    				乘坐地铁CE线至Bayfront站下车<br /><br />
+    				门票<br />
+    				免费<br /><br />
+    				开放时间<br />
+    				全天开放
+				</td>
+			</tr>
+			<tr>
+				<td>21:00</td>
+				<td>
+					longbar喝一杯(1 Beach Rd, Singapore City 189673 ‎ Raffles Hotel)
+					<div class="pic_outer fixed">
+						<img src="http://file30.mafengwo." class="pic">
+					</div>
+					新加坡司令的诞生地！莱佛士酒店2楼！地铁站city hall站出来5分钟左右！据说是新加坡唯一一个可以乱丢花生壳的地方！一杯司令31新还要加税！穷游的娃喝不起！但是因为今年2015是新加坡司令诞生一百周年，所以最后买了一个纪念杯，收藏！很热闹的地方，但基本都是游客！
+				</td>
+			</tr>
+			<tr>
+				<td>22:00</td>
+				<td>
+					回酒店爱干嘛干嘛
+				</td>
+			</tr>
+		</table>
+	</div>
 	<div class="content">
 		<table class="schedule_list_outer">
 			<tr>
@@ -68,7 +136,7 @@
 			</tr>
 			<tr>
 				<td>9:00</td>
-				<td>MC早餐</td>
+				<td>早餐--亚坤（ 裕廊 #02-K1/K2, Jurong Point Shopping Mall, 1 Jurong）</td>
 			</tr>
 			<tr>
 				<td>10:00</td>
@@ -95,28 +163,10 @@
 			</tr>
 			<tr>
 				<td style="background:orange;">13:00</td>
-				<td style="background:orange;">熟食中心 午餐（可以在牛车水里吃，很便宜）</td>
+				<td style="background:orange;">午餐 天天海南鸡饭（卡达耶纳卢尔街/麦克斯韦熟食中心#0-10）</td>
 			</tr>
 			<tr>
-				<td>14:30</td>
-				<td>
-					鱼尾狮公园Merlion Park
-					<div class="pic_outer fixed">
-						<img src="http://file21.mafengwo.net/M00/79/47/wKgB3FGN_9CAbHF7AAUgDdIR2XA64.rbook_comment.w305.jpeg" class="pic">
-						<img src="http://file28.mafengwo.net/M00/FD/FF/wKgB6lRqMHiAXM29AAeyeJJSQPY25.rbook_comment.w305.jpeg" class="pic">
-					</div>
-					鱼尾狮像坐落于市内新加坡河畔鱼尾狮公园内，是新加坡的标志和象征。塑像由雕刻家林南先生和他的两个孩子共同雕塑完成，每年来自全球一百多万的游客都会专程造访鱼尾狮公园，与世界著名的鱼尾狮拍照留念。高8米的狮子口中喷出一股清水，汇入新加坡河中。公园周围还聚集了很多新加坡著名的地标性建筑，如滨海艺术中心、政府大厦、高等法院、维多利亚剧院、莱佛士铜像等，是徒步游览的不二之选。<br /><br />
-    				交通<br />
-    				地铁NS线、EW线市政厅站（City Hall），乘坐10、57、70、75等路公交车至Fullerton Sq站下车。<br /><br />
-    				门票<br />
-    				免费<br /><br />
-    				开放时间<br />
-    				全天
-
-				</td>
-			</tr>
-			<tr>
-				<td>16:00</td>
+				<td>15:00</td>
 				<td>
 					小印度Little India 
 					<div class="pic_outer fixed">
@@ -151,36 +201,67 @@
 			</tr>
 			<tr>
 				<td style="background:orange;">18:00</td>
-				<td style="background:orange;">熟食中心 午餐</td>
-			</tr>
-			<tr>
-				<td>19:00</td>
-				<td>
-					双螺旋桥Double Helix Bridge 
-					<div class="pic_outer fixed">
-						<img src="http://file28.mafengwo.net/M00/DB/B5/wKgB6lQ-kO-Ac_DvAB4o_66m9-803.rbook.w311.jpeg" class="pic">
-						<img src="http://file28.mafengwo.net/M00/70/1F/wKgB6lQmxXKAG5iOAASqVxFeQkM35.rbook.w311.jpeg" class="pic">
-					</div>
-					双螺旋桥位于新加坡滨海湾新市区，是世界上首座曲线桥，2010年4月24日通行。全桥共有长280米的步行通道，结构非常精密。大桥有5座观景平台，位置十分优越。双螺旋的形式象征了“生生不息”、“复兴”、“永远繁荣”、“成长”，相信这样的建筑奇迹一定不会让你失望。<br /><br />
-    				交通<br />
-    				乘坐地铁CE线至Bayfront站下车<br /><br />
-    				门票<br />
-    				免费<br /><br />
-    				开放时间<br />
-    				全天开放
-				</td>
-			</tr>
-			<tr>
-				<td>20:00</td>
-				<td>
-					克拉码头<br />
-					休息、喝一杯、聊聊天
-				</td>
+				<td style="background:orange;">晚餐--熟食中心 </td>
 			</tr>
 			<tr>
 				<td>21:00</td>
 				<td>
 					回酒店
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div class="content" style="display:none;">
+		<table class="schedule_list_outer">
+			<tr>
+				<td>9:00</td>
+				<td>
+					起床
+				</td>
+			</tr>
+			<tr>
+				<td>10:00</td>
+				<td>
+					当地早餐
+				</td>
+			</tr>
+			<tr>
+				<td>11:00</td>
+				<td>
+					怡丰城vivocity<br />
+					坐捷运上圣淘沙岛
+				</td>
+			</tr>
+			<tr>
+				<td>11:30</td>
+				<td>
+					新加坡环球影城Universal Studios Singapore 
+					<div class="pic_outer fixed">
+						<img src="http://file27.mafengwo.net/M00/FD/32/wKgB6lRqL2-APpBtAAhmfAx5quc86.rbook_comment.w1920.jpeg" class="pic">
+						<img src="http://file27.mafengwo.net/M00/FD/2A/wKgB6lRqL2mAS0f6AAlJ1R_iJtM76.rbook_comment.w750.jpeg" class="pic">
+					</div>
+					新加坡环球影城主题公园坐落在圣淘沙岛名胜世界内，是东南亚唯一一个环球影城，适合年轻人和亲子家庭体验游玩。<br />
+					园区总共设有七个主题区，运用尖端科技与电影特效相结合，为观众带来身临其境的惊险体验。热门娱乐项目例如：变形金刚3D对决、木乃伊复仇记、未来水世界表演、史瑞克4D影院等。<br />
+					公园内还有惊险的特技表演和壮观的环球影城明星盛大游行，并且可以跟路边晃悠的电影角色人物合影留念。旺季，主题公园的游玩项目免不了要排队，但是很多项目都设有单人通道，加快排队进程。也可以另行购买快速通行卡，免去排队的烦恼。<br /><br />
+    				交通<br />
+    				上岛在怡丰城(Vivo City)三楼搭乘圣淘沙捷运进入圣淘沙名胜世界或通过步行栈道即可抵达圣淘沙环球影城。<br /><br />
+    				门票<br />
+    				1日票（周一至周五）成人新币66元，4~12岁儿童新币48元；<br />
+					1日票（周六、周日及公共假日）成人新币72元，4~12岁儿童新币52元。<br /><br />
+    				开放时间<br />
+    				10:00-19:00
+				</td>
+			</tr>
+			<tr>
+				<td>19:00</td>
+				<td>
+					出园找吃的
+				</td>
+			</tr>
+			<tr>
+				<td>20:00</td>
+				<td>
+					回酒店或者自己活动
 				</td>
 			</tr>
 		</table>
@@ -293,61 +374,7 @@
 			</tr>
 		</table>
 	</div>
-	<div class="content" style="display:none;">
-		<table class="schedule_list_outer">
-			<tr>
-				<td>9:00</td>
-				<td>
-					起床
-				</td>
-			</tr>
-			<tr>
-				<td>10:00</td>
-				<td>
-					当地早餐
-				</td>
-			</tr>
-			<tr>
-				<td>11:00</td>
-				<td>
-					怡丰城vivocity<br />
-					坐捷运上圣淘沙岛
-				</td>
-			</tr>
-			<tr>
-				<td>11:30</td>
-				<td>
-					新加坡环球影城Universal Studios Singapore 
-					<div class="pic_outer fixed">
-						<img src="http://file27.mafengwo.net/M00/FD/32/wKgB6lRqL2-APpBtAAhmfAx5quc86.rbook_comment.w1920.jpeg" class="pic">
-						<img src="http://file27.mafengwo.net/M00/FD/2A/wKgB6lRqL2mAS0f6AAlJ1R_iJtM76.rbook_comment.w750.jpeg" class="pic">
-					</div>
-					新加坡环球影城主题公园坐落在圣淘沙岛名胜世界内，是东南亚唯一一个环球影城，适合年轻人和亲子家庭体验游玩。<br />
-					园区总共设有七个主题区，运用尖端科技与电影特效相结合，为观众带来身临其境的惊险体验。热门娱乐项目例如：变形金刚3D对决、木乃伊复仇记、未来水世界表演、史瑞克4D影院等。<br />
-					公园内还有惊险的特技表演和壮观的环球影城明星盛大游行，并且可以跟路边晃悠的电影角色人物合影留念。旺季，主题公园的游玩项目免不了要排队，但是很多项目都设有单人通道，加快排队进程。也可以另行购买快速通行卡，免去排队的烦恼。<br /><br />
-    				交通<br />
-    				上岛在怡丰城(Vivo City)三楼搭乘圣淘沙捷运进入圣淘沙名胜世界或通过步行栈道即可抵达圣淘沙环球影城。<br /><br />
-    				门票<br />
-    				1日票（周一至周五）成人新币66元，4~12岁儿童新币48元；<br />
-					1日票（周六、周日及公共假日）成人新币72元，4~12岁儿童新币52元。<br /><br />
-    				开放时间<br />
-    				10:00-19:00
-				</td>
-			</tr>
-			<tr>
-				<td>19:00</td>
-				<td>
-					出园找吃的
-				</td>
-			</tr>
-			<tr>
-				<td>20:00</td>
-				<td>
-					回酒店或者自己活动
-				</td>
-			</tr>
-		</table>
-	</div>
+	
 	<div class="content" style="display:none;">
 		<table class="schedule_list_outer">
 			<tr>
@@ -357,8 +384,22 @@
 			<tr>
 				<td>10:00</td>
 				<td>
-					退房（行李可在原酒店寄存），出发，各自活动一天<br />
-					do what you wanna do, go anywhere you wanna go !
+					东海岸公园East Coast Park 
+					<br />
+					在新加坡东南海岸沿线有一长达8.5公里的细长型公园，这就是新加坡东海岸公园，是新加坡最大的海滨度假区。公园内有各种体育浏览设施，是理想的一日游景点。每到周六、周日，园内到处都是熙熙攘攘的年轻人及家庭旅游者。晴朗的周日带上泳衣到东海岸，东海岸公园的风光，加上黝黑的皮肤相映成趣。 <br />　　
+					公园有可以在这里游泳和冲浪的中央人工游泳区；有由14个网球场构成的全天候网球中心；有可为游客提供多种服务的东海岸娱乐中心；有一个200米的高尔夫练习场；有17米高的滑梯与活水游泳池构成的“大滑水道”；有拥有900多条鳄鱼的热带鳄鱼园；有环境优雅的UDMC度假村等等。
+					<div class="pic_outer fixed">
+						<img src="http://file26.mafengwo.net/M00/1F/57/wKgB4lJSU-2AOGC4AApSvq_h02c91.rbook_comment.w1920.jpeg" class="pic">
+						<img src="http://file27.mafengwo.net/M00/5F/5C/wKgB6lTy6u6AAkYSAAKkQavgMYc97.rbook_comment.w750.jpeg" class="pic">
+					</div>
+					<br /><br />
+    				交通<br />
+    				乘坐地铁东西线（EW线）在勿洛站（Bedok）下车步行即可，车站编号EW5；或者乘坐新巴16号公共汽车至马林台站下车，或者搭乘在周末和假日穿行于海岸公园的新巴401号公共汽车。<br /><br />
+    				门票<br />
+    				免费入园<br /><br />
+    				开放时间<br />
+    				每天晚上 7:00到次日早上 7:00	
+				
 				</td>
 			</tr>
 			<tr>
