--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<td>
 					longbar喝一杯(1 Beach Rd, Singapore City 189673 ‎ Raffles Hotel)
 					<div class="pic_outer fixed">
-						<img src="http://file30.mafengwo." class="pic">
+						<img src="http://file105.mafengwo.net/s6/M00/33/EC/wKgB4lL7k-OAM3mDAAaT2xbo_Cs81.jpeg?imageMogr2%2Fstrip%7CimageMogr2%2Fthumbnail%2F%21480x320r%2Fgravity%2FCenter%2Fcrop%2F%21480x320%2Fquality%2F90" class="pic">
 					</div>
 					新加坡司令的诞生地！莱佛士酒店2楼！地铁站city hall站出来5分钟左右！据说是新加坡唯一一个可以乱丢花生壳的地方！一杯司令31新还要加税！穷游的娃喝不起！但是因为今年2015是新加坡司令诞生一百周年，所以最后买了一个纪念杯，收藏！很热闹的地方，但基本都是游客！
 				</td>
@@ -128,7 +128,7 @@
 			</tr>
 		</table>
 	</div>
-	<div class="content">
+	<div class="content" style="display:none;">
 		<table class="schedule_list_outer">
 			<tr>
 				<td>8:30</td>
