--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
 					在新加坡东南海岸沿线有一长达8.5公里的细长型公园，这就是新加坡东海岸公园，是新加坡最大的海滨度假区。公园内有各种体育浏览设施，是理想的一日游景点。每到周六、周日，园内到处都是熙熙攘攘的年轻人及家庭旅游者。晴朗的周日带上泳衣到东海岸，东海岸公园的风光，加上黝黑的皮肤相映成趣。 <br />　　
 					公园有可以在这里游泳和冲浪的中央人工游泳区；有由14个网球场构成的全天候网球中心；有可为游客提供多种服务的东海岸娱乐中心；有一个200米的高尔夫练习场；有17米高的滑梯与活水游泳池构成的“大滑水道”；有拥有900多条鳄鱼的热带鳄鱼园；有环境优雅的UDMC度假村等等。
 					<div class="pic_outer fixed">
-						<img src="http://file26.mafengwo.net/M00/1F/57/wKgB4lJSU-2AOGC4AApSvq_h02c91.rbook_comment.w1920.jpeg" class="pic">
-						<img src="http://file27.mafengwo.net/M00/5F/5C/wKgB6lTy6u6AAkYSAAKkQavgMYc97.rbook_comment.w750.jpeg" class="pic">
+						<img src="http://file28.mafengwo.net/M00/33/A3/wKgB6lQHt6-AMaBxADECL3FqAjc30.rbook.w311.jpeg" class="pic">
+						<img src="http://file20.mafengwo.net/M00/D0/54/wKgB3FGkt12ARO9JAA1UUthiTnA70.rbook.w311.jpeg" class="pic">
 					</div>
 					<br /><br />
     				交通<br />
